--- a/Views/Acquisitions/Index.cshtml
+++ b/Views/Acquisitions/Index.cshtml
@@ -14,7 +14,7 @@
         </header>
         <!-- Tabs chính -->
         <ul class="nav nav-tabs ">
-            <li class="active"><a href="#orders" data-toggle="tab">Đơn đặt mua / Hợp đồng</a></li>
+            <li class="active"><a href="#orders" data-toggle="tab">Đơn đặt mua / Hợp đồnggádsdasdasdasdasd</a></li>
             <li><a href="#funds" data-toggle="tab">Quản lý Quỹ bổ sung</a></li>
             <li><a href="#acquisition" data-toggle="tab">Bổ sung - tác nghiệp</a></li>
             <li><a href="#warehouse" data-toggle="tab">Quản lý Kho</a></li>
@@ -29,7 +29,7 @@
 
                 <!-- Sub-tab -->
                 <ul class="nav nav-tabs ">
-                    <li class="active"><a href="#lap_giahan_huy" data-toggle="tab">Lập đơn</a></li>
+                    <li class="active"><a href="#lap_giahan_huy" data-toggle="tab">Lập đơnn</a></li>
                     <li><a href="#chiphi" data-toggle="tab">Khai báo chi phí</a></li>
                     <li><a href="#doichieu" data-toggle="tab">Đối chiếu</a></li>
                     <li><a href="#nhacungcap" data-toggle="tab">Quản lý Nhà cung cấp</a></li>
