--- a/Views/BanDoc/BanDocChiTiet.cshtml
+++ b/Views/BanDoc/BanDocChiTiet.cshtml
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Chi tiết bạn đọc</title>
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
-	<link rel="stylesheet" href="~/css/readerdetail.css" />
+	<link rel="stylesheet" href="~/css/BanDocChiTiet.css" />
 </head>
 <body>
 
