--- a/Views/BienMuc/TuDien.cshtml
+++ b/Views/BienMuc/TuDien.cshtml
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Từ điển kiểm soát</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/css/dictionary.css">
+    <link rel="stylesheet" href="/css/TuDien.css">
 </head>
 <body>
 
@@ -42,6 +42,6 @@
         </div>
     </div>
 
-    <script src="/js/dictionary.js"></script>
+    <script src="/js/TuDien.js"></script>
 </body>
 </html>
