--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -34,13 +34,13 @@
                 </a>
                 <ul class="nav submenu">
                     <li>
-                        <a href="/lookup/index">
+                        <a href="/TimKiem/index">
                             <i class="glyphicon glyphicon-list-alt"></i>
                             <span>Tra cứu chính</span>
                         </a>
                     </li>
                     <li>
-                        <a href="/lookup/collection">
+                        <a href="/TimKiem/BoSuuTap">
                             <i class="glyphicon glyphicon-th-large"></i>
                             <span>Bộ sưu tập</span>
                         </a>
@@ -63,13 +63,13 @@
                 </a>
                 <ul class="nav submenu">
                     <li>
-                        <a href="/Cataloging/index">
+                        <a href="/BienMuc/index">
                             <i class="glyphicon glyphicon-list-alt"></i>
                             <span>Biên mục chính</span>
                         </a>
                     </li>
                     <li>
-                        <a href="/Cataloging/Dictionary">
+                        <a href="/BienMuc/TuDien">
                             <i class="glyphicon glyphicon-education"></i>
                             <span>Từ điển</span>
                         </a>
@@ -78,7 +78,7 @@
             </li>
 
             <li>
-                <a href="/Reader/Index">
+                <a href="/BanDoc/Index">
                     <i class="glyphicon glyphicon-user"></i>
                     <span>Quản lý bạn đọc</span>
                 </a>
@@ -99,7 +99,7 @@
                 </a>
                 <ul class="nav submenu">
                     <li>
-                        <a href="/MuonTra/MuonTra">
+                        <a href="/MuonTra/Index">
                             <i class="glyphicon glyphicon-retweet"></i>
                             <span>Mượn trả</span>
                         </a>
@@ -114,14 +114,14 @@
             </li>
 
             <li>
-                <a href="/AnPham/AnPham">
+                <a href="/AnPham/Index">
                     <i class="glyphicon glyphicon-bookmark"></i>
                     <span>Ấn phẩm định kỳ / Nhiều kỳ</span>
                 </a>
             </li>
 
             <li>
-                <a href="/Notification/Index">
+                <a href="/ThongBao/Index">
                     <i class="glyphicon glyphicon-bullhorn"></i>
                     <span>Thông Báo & Nhắc Việc</span>
                 </a>
@@ -173,12 +173,12 @@
                         <!-- Auth desktop -->
                         <ul id="auth-section" class="nav navbar-nav navbar-right" style="margin:0; display:flex; gap:8px; align-items:center;">
                             <li>
-                                <a href="/authenticator/login" class="btn btn-info btn-sm">
+                                <a href="/taikhoan/dangnhap" class="btn btn-info btn-sm">
                                     <i class="glyphicon glyphicon-log-in"></i> ĐĂNG NHẬP
                                 </a>
                             </li>
                             <li>
-                                <a href="/authenticator/register" class="btn btn-success btn-outline btn-sm">
+                                <a href="/taikhoan/dangky" class="btn btn-success btn-outline btn-sm">
                                     <i class="glyphicon glyphicon-user"></i> ĐĂNG KÝ
                                 </a>
                             </li>
