--- a/Views/TimKiem/BoSuuTap.cshtml
+++ b/Views/TimKiem/BoSuuTap.cshtml
@@ -1,5 +1,5 @@
 ﻿
-<link rel="stylesheet" href="~/css/collection.css" asp-append-version="true" />
+<link rel="stylesheet" href="~/css/BoSuuTap.css" asp-append-version="true" />
 <body>
 <!-- 🔖 Tiêu đề chính -->
 <div class="collections-header">
