--- a/Views/TimKiem/Index.cshtml
+++ b/Views/TimKiem/Index.cshtml
@@ -1,4 +1,4 @@
-﻿<link rel="stylesheet" href="~/css/opac.css" asp-append-version="true" />
+﻿<link rel="stylesheet" href="~/css/timkiem.css" asp-append-version="true" />
 
 <section class="opac-page" style="margin-top:50px; margin-bottom:80px; padding-left:30px; padding-right:30px">
     <!-- Header -->
@@ -133,5 +133,5 @@
 </section>
 
 @section Scripts {
-    <script src="~/js/opac.js"></script>
+    <script src="~/js/timkiem.js"></script>
 }
