--- a/Views/TrangChu/Index.cshtml
+++ b/Views/TrangChu/Index.cshtml
@@ -14,7 +14,7 @@
         <div class="hero-content">
             <h1>📚 THƯ VIỆN SỐ TRẤN BIÊN</h1>
             <p style="font-weight:bold">Kho tri thức mở – tra cứu, đọc và chia sẻ tài liệu mọi lúc, mọi nơi.</p>
-            <a href="~/LookUp/Index" class="btn btn-warning btn-lg">
+            <a href="~/TimKiem/Index" class="btn btn-warning btn-lg">
                 <i class="glyphicon glyphicon-search"></i> Tra cứu ngay
             </a>
         </div>
