--- a/Views/BanDoc/Index.cshtml
+++ b/Views/BanDoc/Index.cshtml
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Thông tin bạn đọc</title>
-	<link rel="stylesheet" href="~/css/reader.css" />
+	<link rel="stylesheet" href="~/css/BanDoc.css" />
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
 </head>
 <body>
@@ -516,7 +516,7 @@
 	</div>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-	<script src="~/js/reader.js"></script>
+	<script src="~/js/BanDoc.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
