--- a/Views/BienMuc/Index.cshtml
+++ b/Views/BienMuc/Index.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>📚 Quản lý Biên mục</title>
-    <link rel="stylesheet" href="/css/catalog.css">
+    <link rel="stylesheet" href="/css/BienMuc.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 
@@ -177,6 +177,6 @@
     <!-- JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
-    <script src="/js/catalog.js"></script>
+    <script src="/js/BienMuc.js"></script>
 </body>
 </html>
