--- a/Views/ThongBao/Index.cshtml
+++ b/Views/ThongBao/Index.cshtml
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Notification Dashboard — Thông báo & Nhắc việc đa kênh (Demo)</title>
 
-    <link rel="stylesheet" href="~/css/notification.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/ThongBao.css" asp-append-version="true" />
 </head>
 <body>
 
@@ -282,7 +282,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4"></script>
 
     @section Scripts {
-        <script src="~/js/notification.js"></script>
+        <script src="~/js/ThongBao.js"></script>
     }
 </body>
 </html>
