up dang ky dang nhap

--- a/Views/BanDoc/BanDocChiTiet.cshtml
+++ b/Views/BanDoc/BanDocChiTiet.cshtml
@@ -13,7 +13,7 @@
 		<div class="header-actions">
 
 			<h3><i class="fa fa-user-circle"></i> Thông tin bạn đọc</h3>
-			<a asp-controller="Reader" asp-action="Index" class="btn back-btn">
+			<a asp-controller="BanDoc" asp-action="Index" class="btn back-btn">
 				<i class="fa fa-arrow-left"></i> Quay lại
 			</a>
 		</div>
