--- a/Views/TaiKhoan/DangKy.cshtml
+++ b/Views/TaiKhoan/DangKy.cshtml
@@ -156,7 +156,7 @@
                     <button type="submit" class="btn btn-register">Đăng ký</button>
                 </form>
                 <div class="register-links">
-                    <p>Đã có tài khoản? <a href="/Login">Đăng nhập ngay</a></p>
+                    <p>Đã có tài khoản? <a href="/TaiKhoan/DangNhap">Đăng nhập ngay</a></p>
                 </div>
             </div>
         </div>
