--- a/Views/TaiKhoan/DangNhap.cshtml
+++ b/Views/TaiKhoan/DangNhap.cshtml
@@ -154,7 +154,7 @@
                     <button type="submit" class="btn btn-login">Đăng nhập</button>
                 </form>
                 <div class="login-links">
-                    <p>Chưa có tài khoản? <a href="/Authenticator/Register">Đăng ký ngay</a></p>
+                    <p>Chưa có tài khoản? <a href="/TaiKhoan/DangKy">Đăng ký ngay</a></p>
                     <p><a href="#">Quên mật khẩu?</a></p>
                 </div>
             </div>
