Chỉnh Sửa trang cá nhân

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -195,7 +195,7 @@
                                 <span class="caret"></span>
                             </a>
                             <ul class="dropdown-menu dropdown-menu-right user-menu">
-                                <li><a href="#"><i class="glyphicon glyphicon-user"></i> Trang cá nhân</a></li>
+                                <li><a href="/TaiKhoan/CaNhan"><i class="glyphicon glyphicon-user"></i> Trang cá nhân</a></li>
                                 <li><a href="#"><i class="glyphicon glyphicon-cog"></i> Cài đặt</a></li>
                                 <li class="divider"></li>
                                 <li class="logout-link"><a href="#" id="logoutBtn"><i class="glyphicon glyphicon-log-out"></i> Đăng xuất</a></li>
