--- a/Views/TaiKhoan/CaNhan.cshtml
+++ b/Views/TaiKhoan/CaNhan.cshtml
@@ -15,9 +15,7 @@
     <link rel="stylesheet" href="~/css/canhan.css" />
 </head>
 <body>
-    <div class="container">
-        <div class="row">
-
+    <div class="row CaNhanBody">
             <!-- Cột trái -->
             <div class="col-sm-4">
                 <div class="profile-card">
@@ -183,7 +181,6 @@
                 </div>
 
             </div>
-        </div>
     </div>
 </body>
 </html>
