--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -229,7 +229,7 @@
             <div class="row">
                 <!-- Cột 1 -->
                 <div class="col-xs-12 col-sm-4 col-md-4 text-center text-left-sm">
-                    <a href="/" class="d-inline-block mb-3">
+                    <a href="/" class="d-inline-block mb-3 navbar-brand" style="display: flex; align-items: center;">
                         <img src="~/image/logo.png" alt="Logo"
                              style="height:60px; width:auto; object-fit:contain; margin-bottom:10px;">
                         <span style="font-size:20px; font-weight:700; color:#1e3a8a;">THƯ VIỆN SỐ</span>
