Sua Bo Sung, Trang Chu

--- a/Views/BoSung/Index.cshtml
+++ b/Views/BoSung/Index.cshtml
@@ -85,7 +85,7 @@
                                 <input type="text" id="searchSummaryInput" class="form-control modern-input" placeholder="🔍 Tìm kiếm theo Mã hợp đồng">
                             </div>
                             <div class="col-md-6 text-right mb-2">
-                                <button class="btn btn-gradient" id="showAddCostModal">Thêm chi phí</button>
+
                             </div>
                         </div>
 
@@ -123,7 +123,7 @@
                                     <input type="text" id="searchCostInput" class="form-control modern-input" placeholder="🔍 Tìm kiếm theo Mã hợp đồng">
                                 </div>
                                 <div class="col-md-6 text-right">
-                                    <button class="btn btn-gradient" id="showAddCostModal2">Thêm chi tiết</button>
+                                    <button class="btn btn-gradient" id="showAddCostModal">Thêm chi tiết</button>
                                 </div>
                             </div>
                             <table class="table modern-table table-hover table-striped">
@@ -1367,7 +1367,7 @@
     <div id="addCostModal" class="modal fade" role="dialog">
         <div class="modal-dialog modal-md">
             <div class="modal-content">
-                <div class="modal-header bg-primary"><h4 class="modal-title">Thêm / Sửa chi phí</h4></div>
+                <div class="modal-header bg-primary"><h4 class="modal-title">Thêm chi tiết</h4></div>
                 <div class="modal-body">
                     <div class="form-group"><label>Mã hợp đồng</label><input type="text" id="costContractCode" class="form-control"></div>
                     <div class="form-group"><label>Ngày phát sinh</label><input type="date" id="costDate" class="form-control"></div>
