--- a/Views/TrangChu/Index.cshtml
+++ b/Views/TrangChu/Index.cshtml
@@ -30,6 +30,10 @@
 <body>
     <!-- HERO -->
     <section class="hero">
+        <video autoplay muted loop playsinline class="hero-video">
+            <source src="~/image/video/Intro_ThuVienSo.mp4" type="video/mp4">
+            Trình duyệt của bạn không hỗ trợ video.
+        </video>
         <div class="hero-content">
             <h3 style="font-weight:bold">Chào Mừng Đến</h3>
             <h1 style="font-weight:bold">THƯ VIỆN SỐ TRẤN BIÊN</h1>
