--- a/Views/TaiKhoan/QuenMatKhau.cshtml
+++ b/Views/TaiKhoan/QuenMatKhau.cshtml
@@ -134,6 +134,7 @@
         }
 
             .btn-reset:hover {
+                color: white;
                 background: linear-gradient(90deg, #3c6d92, #5b4e91);
                 transform: scale(1.03);
             }
