Sửa trang cá nhân

--- a/Views/TaiKhoan/CaNhan.cshtml
+++ b/Views/TaiKhoan/CaNhan.cshtml
@@ -45,8 +45,8 @@
                         </div>
                     </div>
                     <hr />
-                    <p class="small-muted">Ngày tham gia</p>
-                    <p><strong>@joinDate</strong></p>
+                    <div class="small-muted">Ngày tham gia</div>
+                    <div style="margin-bottom: 10px"><strong>@joinDate</strong></div>
                     <a href="#settings" class="btn-profile btn-profile-outline btn-profile-block"><i class="fa fa-cog"></i> Cài đặt tài khoản</a>
                 </div>
 
@@ -102,8 +102,6 @@
                                 <label>Email</label>
                                 <input type="email" class="form-control input-sm" value="@userEmail">
                             </div>
-                        </div>
-                        <div class="row">
                             <div class="col-sm-6 form-group">
                                 <label>Số điện thoại</label>
                                 <input type="text" class="form-control input-sm" placeholder="(0123) 456-789">
@@ -112,10 +110,10 @@
                                 <label>Địa chỉ</label>
                                 <input type="text" class="form-control input-sm" placeholder="Thành phố, Quận/Huyện">
                             </div>
-                        </div>
-                        <div class="form-group">
-                            <label>Giới thiệu</label>
-                            <textarea class="form-control input-sm" rows="3" placeholder="Viết vài dòng về bạn..."></textarea>
+                            <div class="col-sm-12 form-group">
+                                <label>Giới thiệu</label>
+                                <textarea class="form-control input-sm" rows="3" placeholder="Viết vài dòng về bạn..."></textarea>
+                            </div>
                         </div>
                         <div class="text-right">
                             <button type="button" class="btn-profile btn-profile-default btn-sm">Hủy</button>
